# ipmvcpkgtest

./: .gitignore  README.md
cmake-clang/: CMakeLists.txt  Readme.txt  vcpkg-configuration.json  vcpkg.json
cmake-clang/src/: main.cpp
msbuild-clang/: ipmvcpkgtest.sln  ipmvcpkgtest.vcxproj  main.cpp  vcpkg.json
msbuild-msvc/: ipmvcpkgtest.sln  ipmvcpkgtest.vcxproj  vcpkg-configuration.json  vcpkg.json
ports/presentmon-sdk/: helpers.cmake  portfile.cmake  vcpkg.json
ports/presentmon-sdk/cmake/: presentmon-sdkConfig.cmake  presentmon-sdkTargets.cmake
ports/presentmon-sdk/msbuild/: Directory.Build.CommonUtilities.props  Directory.Build.IntelPresentMon.props  Directory.Build.IntelPresentMon.targets  commonutilities-port-subset.props
ports/presentmon-wrapper/: helpers.cmake  portfile.cmake  vcpkg.json
ports/presentmon-wrapper/cmake/: presentmon-wrapperConfig.cmake  presentmon-wrapperTargets.cmake
ports/presentmon-wrapper/patch/: rem-inc-etll.patch
